test/fail/integration/_fail_grammar_expr_mod_1.hs
x :: Int
x = jl mod 4
main = print "hello"